# museum_climate_control

./: .gitignore  Makefile  Makefile.pi  README.md  install.sh  pyproject.toml  requirements.txt
.commandcode/taste/: taste.md
config/: settings.example.json  thresholds.json
grafana/: museum_dashboard.json
projects_details/: IIOT Interim Report_Template_Apr26 (1).docx  project for raspberry pi.docx
scripts/: force_alert.py  office_monitor.py  pi_deploy.py  test_actuators.py  test_sensors.py
src/: actuators.py  config.py  influx_writer.py  main.py  mqtt_client.py  notifier.py  sensor_reader.py
src/dashboard/: app.py
src/dashboard/static/: style.css
src/dashboard/templates/: base.html  index.html  test.html  thresholds.html
