[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "museum-climate-control"
version = "1.1.0"
description = "Smart Museum Preservation System — IoT edge solution for Raspberry Pi"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
all = [
    "RPi.GPIO",
    "smbus2",
    "RPi.bme280",
    "paho-mqtt>=1.6,<2",
    "influxdb-client>=1.36",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "jinja2>=3.1",
    "python-multipart",
    "twilio",
    "plyer",
]
